Fix scroll on mobile

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -64,6 +64,7 @@ input, button {
 
 @media (max-width: 768px) {
   body {
+    height: auto;
     margin: 20px;
   }
 
